[build-system]
requires = ["setuptools>=64", "setuptools-scm>=6.4", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "."
write_to = "src/karabo_proxy/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
Karabo_proxy = ["data/*.*"]

[project.scripts]
karabo-channel = "karabo_proxy.async_channel:main"

[project]
dynamic = ["version"]
name = "Karabo-proxy"
authors = [
    {name = "costar & degon"},
]
description = "Client library for the Karabo WebProxy with sync and async support"
readme = "README.md"
dependencies = [
    "aiodns==3.2.0",
    "aiohttp==3.9.5",
    "aiosignal==1.3.1",
    "async-timeout==4.0.3",
    "attrs==23.2.0",
    "cffi==1.16.0",
    "frozenlist==1.4.1",
    "idna==3.7",
    "multidict==6.0.5",
    "pycares==4.4.0",
    "pycparser==2.22",
    "yarl==1.9.4"
]
[project.optional-dependencies] 
test = [
    "exceptiongroup==1.2.1",
    "flake8==7.1.0",
    "frozenlist==1.4.1",
    "iniconfig==2.0.0",
    "isort==5.13.2",
    "mccabe==0.7.0",
    "packaging==24.1",
    "pluggy==1.5.0",
    "pycodestyle==2.12.0",
    "pyflakes==3.2.0",
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "tomli==2.0.1"
]

