[build-system]
requires = ["setuptools>=64", "setuptools-scm>=6.4", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "."
write_to = "src/karabo_proxy/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
Karabo_proxy = ["data/*.*"]

[project]
dynamic = ["version"]
name = "Karabo-proxy"
license = {file = "LICENSE"}
authors = [
    {name = "costar & degon"},
]
description = "Client library for the Karabo WebProxy with sync and async support"
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "aiodns",
    "aiohttp >= 3.9.0",
    "requests >= 2.28.0",
]

[project.urls]
Homepage="https://github.com/European-XFEL/karabo_proxy"

[project.optional-dependencies]
test = [
    "flake8",
    "isort >= 5.10.0",
    "pytest >= 7.4.0",
    "pytest-asyncio",
]
